--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -19,12 +19,18 @@
   justify-content: center;
   align-items: center;
   gap: 8px;
+  border: none;
+}
+
+.profile__add-btn:hover {
+  cursor: pointer;
 }
 
 .profile__avatar {
   margin-right: 20px;
   height: 190px;
   width: 190px;
+  border-radius: 8px;
 }
 
 .profile__column {
@@ -38,7 +44,14 @@
   background-color: #fcf5e5;
   border: none;
   gap: 8px;
-  width: 118px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+  opacity: 70%;
+}
+
+.profile__edit-btn {
+  cursor: pointer;
 }
 
 .profile__name {
@@ -47,18 +60,22 @@
   font-size: 32px;
   line-height: 1;
   max-width: 420px;
+  color: #212121;
   text-overflow: ellipsis;
   overflow: hidden;
   line-clamp: 3;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  max-width: 420px;
 }
 
 .profile__description {
   margin: 0;
   line-height: 16px;
+  font-size: 16px;
+  font-weight: 500;
+  opacity: 70%;
+  color: #212121;
   text-overflow: ellipsis;
   overflow: hidden;
   line-clamp: 3;
