--- a/blocks/card.css
+++ b/blocks/card.css
@@ -7,17 +7,19 @@
 }
 
 .card__title {
-  height: 24px;
+  line-height: 120%;
   font-size: 20px;
   font-weight: 500;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   max-width: 354px;
+  margin: 12px 0 0;
+  color: #212121;
 }
 
 .card__like-btn {
-  background-image: url(../images/Like\ Icon.svg);
+  background-image: url(../images/LikeIcon.svg);
   width: 23px;
   height: 20px;
   opacity: 40%;
@@ -27,6 +29,8 @@
 
 .card__like-btn:hover {
   cursor: pointer;
+  font-weight: 500;
+  opacity: 1;
 }
 
 .card__content {
@@ -41,5 +45,6 @@
   }
   .card__title {
     max-width: 235px;
+    font-size: 16px;
   }
 }
