--- a/blocks/card.css
+++ b/blocks/card.css
@@ -19,17 +19,20 @@
 }
 
 .card__like-btn {
-  background-image: url(../images/LikeIcon.svg);
+  background-image: url(../images/State=Default.svg);
   width: 23px;
   height: 20px;
   opacity: 40%;
   border: none;
   background-color: transparent;
+  margin: 12px 0 0;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .card__like-btn:hover {
   cursor: pointer;
-  font-weight: 500;
   opacity: 1;
 }
 
@@ -46,5 +49,6 @@
   .card__title {
     max-width: 235px;
     font-size: 16px;
+    line-height: 100%;
   }
 }
