--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -53,7 +53,7 @@
 .modal__title {
   margin: 0 0 32px;
   font-weight: 500;
-  font-family: poppins;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-size: 32px;
 }
 
@@ -74,17 +74,20 @@
   border-radius: 8px;
 }
 
+.modal__submit-btn:hover {
+  cursor: pointer;
+}
+
 .modal__input {
   padding: 16px 12px;
   border-radius: 8px;
-  opacity: 40%;
   border-width: 1px;
-  border-color: #212121;
+  border-color: rgba(33, 33, 33, 0.4);
 }
 
 .modal__input:hover {
   cursor: pointer;
-  border: 1px solid rgba(252, 245, 229, 1);
+  border: 1px solid rgba(33, 33, 33, 1);
 }
 
 @media screen and (max-width: 627px) {
