--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,9 +1,24 @@
+.card {
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
 .card__image {
   height: 413px;
   width: 100%;
   object-fit: cover;
   display: block;
   border-radius: 8px;
+}
+
+.card__delete-button {
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .card__title {
@@ -31,9 +46,18 @@
   background-repeat: no-repeat;
 }
 
+.card__like-btn_active {
+  background-image: url(../images/Like-active.svg);
+  opacity: 1;
+}
+
 .card__like-btn:hover {
   cursor: pointer;
   opacity: 1;
+}
+
+.card__like-btn_active:hover {
+  opacity: 0.4;
 }
 
 .card__content {
