--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -4,7 +4,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,7 +13,7 @@
   padding: 0px 0px;
 }
 
-.modal_opened {
+.modal_is-opened {
   visibility: visible;
 }
 
@@ -27,6 +27,18 @@
   overflow: hidden;
   gap: 32px;
   border-radius: 8px;
+}
+
+.modal__image {
+  width: 80vw;
+  height: 80vh;
+  width: 100%;
+  object-fit: contain;
+  display: block;
+}
+
+.modal__image-container {
+  position: relative;
 }
 
 .modal__close-btn {
