--- a/blocks/card.css
+++ b/blocks/card.css
@@ -19,6 +19,14 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  background-image: url(../images/Delete.svg);
+  background-color: transparent;
+  border: none;
+}
+
+.card__delete-button:hover {
+  background-image: url(../images/HoverDelete.svg);
+  cursor: pointer;
 }
 
 .card__title {
