--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -13,8 +13,13 @@
   padding: 0px 0px;
 }
 
+.modal_type_preview {
+  padding: 0 16px;
+}
+
 .modal_is-opened {
   visibility: visible;
+  opacity: 1;
 }
 
 .modal__container {
@@ -30,36 +35,64 @@
 }
 
 .modal__image {
-  width: 80vw;
-  height: 80vh;
+  max-width: 80vw;
+  max-height: 80vh;
   width: 100%;
   object-fit: contain;
   display: block;
+  border-radius: 8px;
 }
 
 .modal__image-container {
   position: relative;
 }
 
-.modal__close-btn {
-  position: absolute;
-  top: 32px;
-  right: 50px;
-  width: 40px;
-  height: 40px;
-  background-color: #fff;
-  border: none;
+.modal__caption {
+  color: #fff;
+  background-color: #212121;
+  max-width: max-content;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0;
+  border-radius: 8px;
+  padding: 4px 8px;
 }
 
-.modal__x-icon {
+.modal__close-btn {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  background-image: url(../images/Group27.svg);
   height: 22.63px;
   width: 22.63px;
   opacity: 40%;
+  background-position: center;
+  transition: all 0.3s;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  top: 20px;
+  right: 20px;
 }
 
-.modal__x-icon:hover {
+.modal__close-btn:hover {
   cursor: pointer;
-  opacity: 100%;
+  opacity: 1;
+}
+
+.modal__close-btn_type_preview {
+  top: 0;
+  right: -52.5px;
+  background-image: url(../images/previewDfault.svg);
+  opacity: 1;
+}
+
+.modal__close-btn_type_preview:hover {
+  opacity: 60%;
 }
 
 .modal__title {
@@ -103,11 +136,16 @@
   border: 1px solid rgba(33, 33, 33, 1);
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 480px) {
   .modal__container {
     padding: 22px 12px 22px;
     width: 300px;
     border-radius: 8px;
+  }
+
+  .modal__close-btn {
+    top: 22px;
+    right: 12px;
   }
 
   .modal__title {
@@ -123,8 +161,14 @@
   .modal__label {
     margin-top: 24px;
   }
-  .modal__close-btn {
-    top: 12px;
-    right: 12px;
+}
+
+@media screen and (max-width: 627px) {
+  .modal__close-btn_type_preview {
+    top: -48px;
+    right: 0;
+  }
+  .modal__image {
+    max-width: unset;
   }
 }
