--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,6 +11,8 @@
   flex-direction: column;
   visibility: hidden;
   padding: 0px 0px;
+  transition: visibility 0.3s;
+  transition: opacity 0.3s;
 }
 
 .modal_type_preview {
@@ -80,7 +82,6 @@
 }
 
 .modal__close-btn:hover {
-  cursor: pointer;
   opacity: 1;
 }
 
@@ -122,6 +123,7 @@
 .modal__submit-btn:hover {
   cursor: pointer;
   opacity: 0.8;
+  background: rgba(0, 0, 0, 0.8)
 }
 
 .modal__input {
