--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,8 +11,8 @@
   flex-direction: column;
   visibility: hidden;
   padding: 0px 0px;
-  transition: visibility 0.3s;
-  opacity: 0.3s;
+  transition: visibility 0.3s, opacity 0.3s ease-in;
+  opacity: 0;
 }
 
 .modal_type_preview {
@@ -22,8 +22,6 @@
 .modal_is-opened {
   visibility: visible;
   opacity: 1;
-  transition: visibility 0.3s;
-  opacity: 0.3s;
 }
 
 .modal__container {
