--- a/blocks/card.css
+++ b/blocks/card.css
@@ -13,6 +13,10 @@
   border-radius: 8px;
 }
 
+.card__image:hover {
+  cursor: pointer;
+}
+
 .card__delete-button {
   width: 32px;
   height: 32px;
